# ece-world

./: .gitignore  CMakeLists.txt  Parc.c  README.md  main.c
Games/Course_Chevaux/: chevaux.c  chevaux.h
Games/Ducky/: ducky.c  ducky.h
Games/Guitar_hero/: guitar_hero.c  guitar_hero.h
Games/Ice_palace/: ice_palace.c  ice_palace.h
Games/Jackpot/: jackpot.c  jackpot.h
Games/River/: river.c  river.h
Games/Shoot/: shoot.c  shoot.h
Games/Slot_Machine/: slot_machine.c  slot_machine.h
Games/Snake/: snake.c  snake.h
Games/Taupe/: taupe.c  taupe.h
Init_Allegro/: allegro.c  allegro.h
Menu/: menu.c  menu.h
Parc/: Parc.c  Parc.h  police.pcx
Sauvegarde/: sauvegarde.c  sauvegarde.h
ScoreTab/: scoreTab.c  scoreTab.h
joueur/: joueur.c  joueur.h
marp-projet-ece_world/: presentation.md  theme.css
marp-projet-ece_world/images/: equipe.avif
saves/: Zebi.sav  jus.sav  test.sav
saves/games/: 0Snake.sav  1Taupe.sav  3Guitar.sav  4Ducky.sav  5Jackpot.sav  6Frogger.sav  7Shoot.sav  Ducky.sav  Guitar.sav  River.sav  Shoot.sav  Snake.sav  Taupe.sav
